--- a/task9-1.html
+++ b/task9-1.html
@@ -155,44 +155,44 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-xs-12 col-sm-3 main_how_set">
+						<div class="col-xs-12 col-sm-6 col-md-3 main_how_set">
 							<div class="main_how_img"></div>
 							<div class="main_how_circle flex_center">1</div>
 							<p class="main_how_p">匹配你现在的个人情况寻找适合自己的岗位</p>
 						</div>
-						<div class="col-xs-12 col-sm-3 main_how_set">
+						<div class="col-xs-12 col-sm-6 col-md-3 main_how_set">
 							<img src="img/right.jpg" class="main_how_img"></img>
 							<div class="main_how_circle flex_center">2</div>
 							<p class="main_how_p">了解职业前景薪金待遇、竞争压力等</p>
 						</div>
-						<div class="col-xs-12 col-sm-3 main_how_set">
+						<div class="col-xs-12 col-sm-6 col-md-3 main_how_set">
 							<img src="img/right.jpg" class="main_how_img"></img>
 							<div class="main_how_circle flex_center">3</div>
 							<p class="main_how_p">掌握行业内顶级技能</p>
 						</div>
-						<div class="col-xs-12 col-sm-3 main_how_set">
+						<div class="col-xs-12 col-sm-6 col-md-3 main_how_set">
 							<img src="img/right.jpg" class="main_how_img"></img>
 							<div class="main_how_circle flex_center">4</div>
 							<p class="main_how_p">查看职业目标任务</p>
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-xs-12 col-sm-3 main_how_set">
-							<div class="main_how_img"></div>
+						<div class="col-xs-12 col-sm-6 col-md-3 main_how_set">
+							<img src="img/right.jpg" class="main_how_img"></img>
 							<div class="main_how_circle flex_center">5</div>
 							<p class="main_how_p">参考学习资源，掌握技能点，逐个完成任务</p>
 						</div>
-						<div class="col-xs-12 col-sm-3 main_how_set">
+						<div class="col-xs-12 col-sm-6 col-md-3 main_how_set">
 							<img src="img/right.jpg" class="main_how_img"></img>
 							<div class="main_how_circle flex_center">6</div>
 							<p class="main_how_p">加入班级，和小伙伴们互相帮助，一块学习</p>
 						</div>
-						<div class="col-xs-12 col-sm-3 main_how_set">
+						<div class="col-xs-12 col-sm-6 col-md-3 main_how_set">
 							<img src="img/right.jpg" class="main_how_img"></img>
 							<div class="main_how_circle flex_center">7</div>
 							<p class="main_how_p">选择倒是，一路引导，加速自己成长</p>
 						</div>
-						<div class="col-xs-12 col-sm-3 main_how_set">
+						<div class="col-xs-12 col-sm-6 col-md-3 main_how_set">
 							<img src="img/right.jpg" class="main_how_img"></img>
 							<div class="main_how_circle flex_center">8</div>
 							<p class="main_how_p">完成职业技能，升级业界大牛</p>
@@ -209,28 +209,28 @@
 					    </div>
 				    </div>
 				    <div class="row">
-				    	<div class="col-xs-12 col-sm-3 flex_center">
+				    	<div class="col-xs-12 col-sm-6 col-md-3 flex_center">
 				    		<div class="main_display_set">
 				    			<img src="img/student1.jpg" class="main_display_img">
 				    			<h3 class="main_display_h3">技术顾问：罗大佑</h3>
 				    			<p class="main_display_p">百度技术总监：互联网基础服务领域、从事虚拟主机、云服务器、域名。曾任新网高级技术经理，负责技术研发、团队管理与建设</p>
 				    		</div>
 				    	</div>
-				    	<div class="col-xs-12 col-sm-3 flex_center">
+				    	<div class="col-xs-12 col-sm-6 col-md-3 flex_center">
 				    		<div class="main_display_set">
 				    			<img src="img/student2.jpg" class="main_display_img">
 				    			<h3 class="main_display_h3">技术顾问：罗大佑</h3>
 				    			<p class="main_display_p">百度技术总监：互联网基础服务领域、从事虚拟主机、云服务器、域名。曾任新网高级技术经理，负责技术研发、团队管理与建设</p>
 				    		</div>
 				    	</div>
-				    	<div class="col-xs-12 col-sm-3 flex_center">
+				    	<div class="col-xs-12 col-sm-6 col-md-3 flex_center">
 				    		<div class="main_display_set">
 				    			<img src="img/student3.jpg" class="main_display_img">
 				    			<h3 class="main_display_h3">技术顾问：罗大佑</h3>
 				    			<p class="main_display_p">百度技术总监：互联网基础服务领域、从事虚拟主机、云服务器、域名。曾任新网高级技术经理，负责技术研发、团队管理与建设</p>
 				    		</div>
 				    	</div>
-				    	<div class="col-xs-12 col-sm-3 flex_center">
+				    	<div class="col-xs-12 col-sm-6 col-md-3 flex_center">
 				    		<div class="main_display_set">
 				    			<img src="img/student4.jpg" class="main_display_img">
 				    			<h3 class="main_display_h3">技术顾问：罗大佑</h3>
@@ -257,20 +257,23 @@
 				</div>
 				<div class="row">
 					<div class="main_company_about">
-						<div class="col-xs-12 col-sm-2 flex_center main_company_set">
+						<div class="col-xs-12 col-md-2 col-sm-4 main_company_set">
 							<img src="img/company1.jpg">
 						</div>
-						<div class="col-xs-12 col-sm-2 flex_center main_company_set">
+						<div class="col-xs-12 col-md-2 col-sm-4 flex_center main_company_set">
 							<img src="img/company2.jpg">
 						</div>
-						<div class="col-xs-12 col-sm-2 flex_center main_company_set">
+						<div class="col-xs-12 col-md-2 col-sm-4 flex_center main_company_set">
 							<img src="img/company3.jpg">
 						</div>
-						<div class="col-xs-12 col-sm-2 flex_center main_company_set">
+						<div class="col-xs-12 col-md-2 col-sm-4 flex_center main_company_set">
 							<img src="img/company4.jpg">
 						</div>
-						<div class="col-xs-12 col-sm-2 flex_center main_company_set">
+						<div class="col-xs-12 col-md-2 col-sm-4 flex_center main_company_set">
 							<img src="img/company5.jpg">
+						</div>
+						<div class="col-xs-12 col-md-2 col-sm-4 flex_center main_company_set">
+							
 						</div>
 					</div>
 				</div>
