--- a/task9-3.html
+++ b/task9-3.html
@@ -6,7 +6,7 @@
 	                                     initial-scale=1.0,
 	                                     maximum-scale=1.0,
 	                                     user-scalable=no">
-	<title>task8职业</title>
+	<title>task9职业</title>
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/task8.css">
 </head>
@@ -81,7 +81,7 @@
 				<div class="col-xs-12 main_major flex_center_column">
 					<h3 class="main_major_h3">前端开发方向</h3>
 				</div>
-				<div class="col-xs-12 col-sm-4 main_major_set">
+				<div class="col-xs-12 col-md-4 col-sm-6 main_major_set">
 					<div class="main_major_box">
 						<div>
 							<div class="main_major_list flex_center_column">
@@ -150,7 +150,7 @@
                         </p>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-4 main_major_set">
+				<div class="col-xs-12 col-md-4 col-sm-6 main_major_set">
 					<div class="main_major_box">
 						<div>
 							<div class="main_major_list flex_center_column">
@@ -219,7 +219,7 @@
                         </p>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-4 main_major_set">
+				<div class="col-xs-12 col-md-4 col-sm-6 main_major_set">
 					<div class="main_major_box">
 						<div>
 							<div class="main_major_list flex_center_column">
@@ -293,7 +293,7 @@
 				<div class="col-xs-12 main_major flex_center_column">
 					<h3 class="main_major_h3">后端开发方向</h3>
 				</div>
-				<div class="col-xs-12 col-sm-4 main_major_set">
+				<div class="col-xs-12 col-md-4 col-sm-6 main_major_set">
 					<div class="main_major_box">
 						<div>
 							<div class="main_major_list flex_center_column">
@@ -362,7 +362,7 @@
                         </p>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-4 main_major_set">
+				<div class="col-xs-12 col-md-4 col-sm-6 main_major_set">
 					<div class="main_major_box">
 						<div>
 							<div class="main_major_list flex_center_column">
@@ -431,7 +431,7 @@
                         </p>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-4 main_major_set">
+				<div class="col-xs-12 col-md-4 col-sm-6 main_major_set">
 					<div class="main_major_box">
 						<div>
 							<div class="main_major_list flex_center_column">
@@ -500,7 +500,7 @@
                         </p>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-4 main_major_set">
+				<div class="col-xs-12 col-md-4 col-sm-6 main_major_set">
 					<div class="main_major_box">
 						<div>
 							<div class="main_major_list flex_center_column">
@@ -569,7 +569,7 @@
                         </p>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-4 main_major_set">
+				<div class="col-xs-12 col-md-4 col-sm-6 main_major_set">
 					<div class="main_major_box">
 						<div>
 							<div class="main_major_list flex_center_column">
@@ -643,7 +643,7 @@
 				<div class="col-xs-12 main_major flex_center_column">
 					<h3 class="main_major_h3">运维方向</h3>
 				</div>
-				<div class="col-xs-12 col-sm-4 main_major_set">
+				<div class="col-xs-12 col-md-4 col-sm-6 main_major_set">
 					<div class="main_major_box">
 						<div>
 							<div class="main_major_list flex_center_column">
@@ -712,7 +712,7 @@
                         </p>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-4 main_major_set">
+				<div class="col-xs-12 col-md-4 col-sm-6 main_major_set">
 					<div class="main_major_box">
 						<div>
 							<div class="main_major_list flex_center_column">
@@ -781,7 +781,7 @@
                         </p>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-4 main_major_set">
+				<div class="col-xs-12 col-md-4 col-sm-6 main_major_set">
 					<div class="main_major_box">
 						<div>
 							<div class="main_major_list flex_center_column">
@@ -855,7 +855,7 @@
 				<div class="col-xs-12 main_major flex_center_column">
 					<h3 class="main_major_h3">移动开发方向</h3>
 				</div>
-				<div class="col-xs-12 col-sm-4 main_major_set">
+				<div class="col-xs-12 col-md-4 col-sm-6 main_major_set">
 					<div class="main_major_box">
 						<div>
 							<div class="main_major_list flex_center_column">
